# world_cup_agent

./: .env.example  .gitignore  README.md  pyproject.toml  world_cup_agent_plan.md
app/: __init__.py  agent.py  config.py  main.py  prompts.py  web.py
app/rag/: __init__.py  ingest.py  store.py
app/tools/: __init__.py  football_api.py  knowledge.py  search.py
data/: mock_fixtures.json
data/knowledge/: argentina_team_profile_2026.md  austria_jordan_report_2026.md  daily_report_policy.md  england_croatia_preview_2026.md  england_team_profile_2026.md  france_senegal_3_1_report_2026.md  france_team_profile_2026.md  history_brazil_1970_team.md  history_germany_brazil_7_1_2014.md  history_golden_boot.md  history_italy_2006_champions.md  history_maradona_1986.md  history_messi_2022_journey.md  history_pele_three_titles.md  history_world_cup_underdog_stories.md  history_zidane_2006_final.md  matchday6_recap_2026.md  matchday7_preview_2026.md  mbappe_france_opening_2026.md  messi_hat_trick_argentina_algeria_2026.md  messi_records_milestones_2026.md  messi_ronaldo_world_cup_legacy.md  norway_haaland_brace_iraq_2026.md  portugal_dr_congo_preview_2026.md  portugal_ronaldo_underperformance_analysis.md  portugal_team_profile_2026.md  spain_2026_matchday5.md  spain_team_profile_2026.md  world_cup_2026_format_hosts.md  world_cup_group_rules.md
web/: app.js  index.html  styles.css
